# dansweeper-ml

./: CMakeLists.txt  README.md
include/dansweeperml/: controller.h  grid.h  render.h  tile.h
include/dansweeperml/core/: grid.h  render.h
include/dansweeperml/solver/: isolver.h
include/dansweeperml/solver/algorithm/: bfsoptimized.h  linearscan.h
include/dansweeperml/solver/ml/linearregression/: LinearRegressionTrainer.cpp  LinearRegressionTrainer.h  features.h  linearregressiontrainer.h
src/: main.cpp
src/core/: controller.cpp  grid.cpp  render.cpp
src/solver/algorithm/: bfsoptimized.cpp  linearscan.cpp
src/solver/ml/linearregression/: linearregressiontrainer.cpp
